Changed Background Button and made Clock more visible with other image

--- a/tab.html
+++ b/tab.html
@@ -78,7 +78,7 @@
     <button id="toggleSpeedtest" class="glow-on-hover" aria-label="Speedtest anzeigen">Speedtest</button>
   </div>
   <div id="backgroundButton">
-    <label for="backgroundInput" class="glow-on-hover" aria-label="Hintergrundbild auswählen">Hintergrund ändern</label>
+    <button for="backgroundInput" class="glow-on-hover" aria-label="Hintergrundbild auswählen">Hintergrund ändern</button>
     <input type="file" id="backgroundInput" accept="image/*" style="display: none;">
   </div>
   <div id="resetBackgroundButton">
