--- a/tab.html
+++ b/tab.html
@@ -1,105 +1,167 @@
 <!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Neuer Tab</title>
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOp8yQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <style>
-    /* Increase base font-size and ensure form controls inherit sizing */
-    :root { font-size: 18px; }
-    html, body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; line-height: 1.4; }
-    button, input, select, textarea, label { font: inherit; font-size: inherit; line-height: inherit; }
-    /* Ensure svg icons scale with text */
-    button svg, .glow-on-hover svg { height: 1em; width: 1em; vertical-align: -0.125em; }
-  </style>
+  <title></title>
+  <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/calendar.css">
+  <link rel="stylesheet" href="css/weather.css">
+  <link rel="stylesheet" href="css/settings.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600;700&family=Sora:wght@300;400;500;600&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" referrerpolicy="no-referrer">
 </head>
 <body>
-  <main>
-    <!-- Calendar Section -->
-    <section id="calendarDiv" class="container hidden">
-      <div class="calendar">
-        <header class="calendar__header">
-          <button id="prevMonth" class="calendar__button calendar__button--prev" aria-label="Vorheriger Monat">&lt;</button>
-          <h2 id="currentMonth" class="calendar__month-name"></h2>
-          <button id="nextMonth" class="calendar__button calendar__button--next" aria-label="Nächster Monat">&gt;</button>
-        </header>
-        <div class="day-names">
-          <span class="day-name">So</span>
-          <span class="day-name">Mo</span>
-          <span class="day-name">Di</span>
-          <span class="day-name">Mi</span>
-          <span class="day-name">Do</span>
-          <span class="day-name">Fr</span>
-          <span class="day-name">Sa</span>
-        </div>
-        <div class="calendar-body" id="calendarBody"></div>
-      </div>
-    </section>
+  <div class="background"></div>
+  <div class="ambient"></div>
 
-    <!-- Weather Section -->
-    <section id="weatherDiv" class="container container--weather hidden">
-      <div class="card">
-        <div class="search">
-          <input type="text" class="search-bar" placeholder="Stadt suchen" aria-label="Stadt für Wettervorhersage suchen">
-          <button class="searchButton" aria-label="Suche starten">
-            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg">
-              <path d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"></path>
-            </svg>
-          </button>
-        </div>
-        <div class="weather loading">
-          <h1 class="city"></h1>
-          <h1 class="temp"></h1>
-          <div class="feels_like"></div>
-          <div class="flex">
-            <img src="" alt="Wetter-Symbol" class="icon" />
-            <div class="description"></div>
-          </div>
-          <div class="other_data">Weitere Daten:
-            <div class="humidity"></div>
-            <div class="wind"></div>
-            <div class="temp_min"></div>
-            <div class="temp_max"></div>
-          </div>
-        </div>
-      </div>
-    </section>
+  <main class="stage">
+    <header class="hero">
+      <div id="clockDiv" class="hero__time"></div>
+      <div id="dateDiv" class="hero__date"></div>
+    </header>
 
-    <!-- Speedtest Section -->
-    <section id="speedtestDiv" class="container container--speedtest hidden">
-      <div class="speedtest-wrapper">
-        <iframe src="https://www.metercustom.net/plugin/" loading="lazy" sandbox="allow-scripts allow-same-origin" class="speedtest-iframe"></iframe>
-      </div>
+    <section class="panels">
+      <article id="calendarWidget" class="panel panel--calendar">
+        <div class="panel__header">
+          <h3 data-i18n="calendar"></h3>
+          <button class="close-widget" data-widget="calendarWidget" data-i18n-aria-label="close">&times;</button>
+        </div>
+        <div class="panel__content">
+          <section id="calendarDiv" class="container">
+            <div class="calendar">
+              <header class="calendar__header">
+                <button id="prevMonth" class="calendar__button calendar__button--prev" data-i18n-aria-label="previousMonth">&lt;</button>
+                <h2 id="currentMonth" class="calendar__month-name"></h2>
+                <button id="nextMonth" class="calendar__button calendar__button--next" data-i18n-aria-label="nextMonth">&gt;</button>
+              </header>
+              <div class="day-names">
+                <span class="day-name" data-i18n="mon"></span>
+                <span class="day-name" data-i18n="tue"></span>
+                <span class="day-name" data-i18n="wed"></span>
+                <span class="day-name" data-i18n="thu"></span>
+                <span class="day-name" data-i18n="fri"></span>
+                <span class="day-name" data-i18n="sat"></span>
+                <span class="day-name" data-i18n="sun"></span>
+              </div>
+              <div class="calendar-body" id="calendarBody"></div>
+            </div>
+          </section>
+        </div>
+      </article>
+
+      <article id="weatherWidget" class="panel panel--weather">
+        <div class="panel__header">
+          <h3 data-i18n="weather"></h3>
+          <button class="close-widget" data-widget="weatherWidget" data-i18n-aria-label="close">&times;</button>
+        </div>
+        <div class="panel__content">
+          <section id="weatherDiv" class="container container--weather">
+            <div class="weather-embed">
+              <iframe
+                class="weather-iframe"
+                src="about:blank"
+                data-i18n-title="weatherWidgetTitle"
+                loading="lazy"
+                referrerpolicy="no-referrer"
+              ></iframe>
+            </div>
+          </section>
+        </div>
+      </article>
+
+      <article id="speedtestWidget" class="panel panel--speedtest">
+        <div class="panel__header">
+          <h3 data-i18n="speedtest"></h3>
+          <button class="close-widget" data-widget="speedtestWidget" data-i18n-aria-label="close">&times;</button>
+        </div>
+        <div class="panel__content">
+          <section id="speedtestDiv" class="container container--speedtest">
+            <div class="speedtest-wrapper">
+              <iframe src="https://www.metercustom.net/plugin/" loading="lazy" sandbox="allow-scripts allow-same-origin" class="speedtest-iframe"></iframe>
+            </div>
+          </section>
+        </div>
+      </article>
     </section>
   </main>
 
-  <!-- Controls -->
-  <div id="calendarButton">
-    <button id="toggleCalendar" class="glow-on-hover" aria-label="Kalender anzeigen">Kalender</button>
-  </div>
-  <div id="weatherButton">
-    <button id="toggleWeather" class="glow-on-hover" aria-label="Wetter anzeigen">Wetter</button>
-  </div>
-  <div id="speedtestButton">
-    <button id="toggleSpeedtest" class="glow-on-hover" aria-label="Speedtest anzeigen">Speedtest</button>
-  </div>
-  <div id="backgroundButton">
-    <label for="backgroundInput" class="glow-on-hover" aria-label="Hintergrundbild auswählen" aria-setsize="10">Hintergrund ändern</label>
-    <input type="file" id="backgroundInput" accept="image/*" style="display: none;">
-  </div>
-  <div id="resetBackgroundButton">
-    <button id="resetBackground" class="glow-on-hover" aria-label="Hintergrund zurücksetzen">Hintergrund zurücksetzen</button>
+  <div id="settingsModal" class="modal">
+    <div class="modal__content">
+      <div class="modal__header">
+        <h2 data-i18n="settings"></h2>
+        <button id="closeSettingsModal" class="close-modal" data-i18n-aria-label="close">&times;</button>
+      </div>
+      <div class="setting">
+        <label for="locationInput" data-i18n="locationLabel"></label>
+        <input type="text" id="locationInput" autocomplete="address-level2" data-i18n-placeholder="locationPlaceholder">
+        <button id="saveWeather" class="action-button" data-i18n="save"></button>
+      </div>
+      <div class="setting">
+        <label for="stateInput" data-i18n="stateLabel"></label>
+        <select id="stateInput" autocomplete="address-level1">
+          <option value="bw" data-i18n="stateBw"></option>
+          <option value="by" data-i18n="stateBy"></option>
+          <option value="be" data-i18n="stateBe"></option>
+          <option value="bb" data-i18n="stateBb"></option>
+          <option value="hb" data-i18n="stateHb"></option>
+          <option value="hh" data-i18n="stateHh"></option>
+          <option value="he" data-i18n="stateHe"></option>
+          <option value="mv" data-i18n="stateMv"></option>
+          <option value="ni" data-i18n="stateNi"></option>
+          <option value="nw" data-i18n="stateNw"></option>
+          <option value="rp" data-i18n="stateRp"></option>
+          <option value="sl" data-i18n="stateSl"></option>
+          <option value="sn" data-i18n="stateSn"></option>
+          <option value="st" data-i18n="stateSt"></option>
+          <option value="sh" data-i18n="stateSh"></option>
+          <option value="th" data-i18n="stateTh"></option>
+        </select>
+        <button id="saveState" class="action-button" data-i18n="save"></button>
+      </div>
+      <div class="setting">
+        <label for="backgroundDim" data-i18n="backgroundDimLabel"></label>
+        <input type="range" id="backgroundDim" min="0" max="100" step="5" value="20">
+      </div>
+      <div class="setting">
+        <label for="clockColor" data-i18n="clockColorLabel"></label>
+        <input type="color" id="clockColor" value="#f5f7ff">
+      </div>
+    </div>
   </div>
 
-  <!-- Background -->
-  <div class="background"></div>
+  <div class="dock">
+    <button id="toggleCalendar" class="dock__button" data-i18n-aria-label="calendar" aria-pressed="true">
+      <i class="fa-regular fa-calendar-days" aria-hidden="true"></i>
+      <span data-i18n="calendar"></span>
+    </button>
+    <button id="toggleWeather" class="dock__button" data-i18n-aria-label="weather" aria-pressed="true">
+      <i class="fa-solid fa-cloud-sun" aria-hidden="true"></i>
+      <span data-i18n="weather"></span>
+    </button>
+    <button id="toggleSpeedtest" class="dock__button" data-i18n-aria-label="speedtest" aria-pressed="true">
+      <i class="fa-solid fa-gauge-high" aria-hidden="true"></i>
+      <span data-i18n="speedtest"></span>
+    </button>
+    <div class="dock__menu" id="backgroundMenu">
+      <button id="toggleBackgroundMenu" class="dock__button" data-i18n-aria-label="changeBackground" aria-expanded="false">
+        <i class="fa-regular fa-image" aria-hidden="true"></i>
+        <span data-i18n="background"></span>
+      </button>
+      <div id="backgroundDropdown" class="dock__dropdown hidden">
+        <button id="changeBackground" class="dock__dropdown-item" data-i18n="backgroundChangeShort"></button>
+        <button id="resetBackground" class="dock__dropdown-item" data-i18n="backgroundResetShort"></button>
+      </div>
+      <input type="file" id="backgroundInput" accept="image/*" style="display: none;">
+    </div>
+    <button id="toggleSettings" class="dock__button" data-i18n-aria-label="settings" aria-expanded="false">
+      <i class="fa-solid fa-gear" aria-hidden="true"></i>
+      <span data-i18n="settings"></span>
+    </button>
+  </div>
 
-  <!-- Clock and Date -->
-  <div id="clockDiv"></div>
-  <div id="dateDiv"></div>
-
-  <script src="script.js" defer></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
